--- a/WeldingPassportsApp/WeldingPassportsApp/Views/ExamCenters/Edit.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/ExamCenters/Edit.cshtml
@@ -36,7 +36,7 @@
                             <ul class="dropdown-menu dropdown-menu-right">
                                 @if (userCanEditCompanies)
                                 {
-                                    <li><button class="dropdown-item" type="submit" name="submit" value="@ExamCenterIDStore.GetCompanyEditBtnID" id="@ExamCenterIDStore.GetCompanyEditBtnID" style="width:auto">@Localizer["Edit"]</button></li>
+                                <li><button class="dropdown-item" type="submit" name="submit" value="@ExamCenterIDStore.GetCompanyEditBtnID" id="@ExamCenterIDStore.GetCompanyEditBtnID" style="width:auto">@Localizer["Edit"]</button></li>
                                 }
                                 @if (userCanCreateCompanies)
                                 {
@@ -133,7 +133,7 @@
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     <script src="~/js/ActionBtn.js"></script>
     <script src="~/js/OnClickClear.js"></script>
-    <script type="module" src="~/js/ExamCenters/PrepareFormOnsubmit.js"></script>
+    <script src="~/js/ExamCenters/PrepareFormOnsubmit.js"></script>
     <script type="module" src="~/js/ExamCenters/OnChangeCompanyID.js"></script>
     <script type="module" src="~/js/ExamCenters/OnChangeCompanyContactID.js"></script>
 }
