--- a/WeldingPassportsApp/WeldingPassportsApp/Views/TrainingCenters/Edit.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/TrainingCenters/Edit.cshtml
@@ -17,7 +17,7 @@
     <div class="form-group row mb-3">
         <label asp-for="Letter" class="col-sm-2 col-form-label"></label>
         <div class="col-sm-10 align-self-center">
-            <input asp-for="Letter" class="form-control" readonly placeholder="@Localizer["Set a capital letter"]" />
+            <input asp-for="Letter" class="form-control" disabled placeholder="@Localizer["Set a capital letter"]" />
         </div>
         <span asp-validation-for="Letter" class="text-danger"></span>
     </div>
@@ -62,7 +62,7 @@
     </div>
         <div class="form-group row mb-3">
             <label asp-for="IsActive" class="col-sm-2 col-form-label"></label>
-            <div class="col-sm-10">
+        <div class="col-sm-10 align-self-center">
                 <div class="input-group">
                     <input asp-for="IsActive" class="form-check-input" style="margin-left : 0" />
                 </div>
@@ -80,7 +80,7 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     <script src="~/js/OnClickClear.js"></script>
-    <script type="module" src="~/js/TrainingCenters/PrepareFormOnsubmit.js"></script>
+    <script src="~/js/TrainingCenters/PrepareFormOnsubmit.js"></script>
     <script type="module" src="~/js/TrainingCenters/OnChangeCompanyID.js"></script>
     <script type="module" src="~/js/TrainingCenters/OnChangeCompanyContactID.js"></script>
 }
